--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -16,7 +16,7 @@
   grid-template-areas:
     "title button"
     "description description";
-  grid-template-columns: minmax(auto, 373px) auto;
+  grid-template-columns: minmax(auto, 375px) auto;
 }
 
 .profile__title {
@@ -25,6 +25,9 @@
   line-height: 48px;
   grid-area: title;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__edit-button {
@@ -86,17 +89,6 @@
 }
 
 @media screen and (max-width: 480px) {
-  .profile {
-    flex-direction: column;
-  }
-
-  .profile__info {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 100%;
-  }
-
   .profile__title {
     font-size: 22px;
     line-height: 27px;
@@ -115,5 +107,10 @@
   .profile__edit-button {
     width: 18px;
     height: 18px;
+    margin: 0 0 0 10px;
+  }
+
+  .profile__add-button {
+    width: 282px;
   }
 }
